--- a/templates/newsbeuter.conf.j2
+++ b/templates/newsbeuter.conf.j2
@@ -1,6 +1,5 @@
 [program:newsbeuter]
-directory={{ newsbeuter_spread_path }}
-command=gunicorn app:app -b localhost:{{ newsbeuter_spread_port }}
+command=gunicorn newsbeuter_spread.app:app -b {{ newsbeuter_spread_host }}:{{ newsbeuter_spread_port }}
 user={{ newsbeuter_spread_user }}
 autostart=true
 autorestart=true
